--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "http-server -p 5566"
   },
-  "author": "ParamonovIvan",
+  "author": "IKV",
   "license": "ISC",
   "devDependencies": {
     "http-server": "^14.1.1"
